# RayTracer

./: .gitignore  CMakeLists.txt  probdistribution.cpp
DerivedData/ModuleCache/: Session.modulevalidation
DerivedData/RayTracer/: FindHistory.xcfind  info.plist
DerivedData/RayTracer/Logs/Debug/: 00487026-4D2B-4B6B-ACE6-DC6C76ADEDF5.xcactivitylog  005F4879-F559-41E3-9DD4-9A2DB5CC958E.xcactivitylog  01479F85-9348-459A-B7E6-CF47E46B7BAB.xcactivitylog  02E91CCE-B94F-4C18-9E90-FFFCD27DFB39.xcactivitylog  03CFC51B-A71B-4523-854D-0C0C177F6A77.xcactivitylog  03D28930-67A0-4718-8228-41E48AF91F36.xcactivitylog  0419D9B0-558A-4B07-8669-ADE4703223EE.xcactivitylog  0443CAB4-D1B1-4939-BF97-F0AC5A3167E5.xcactivitylog  0477753F-E6C0-4DAE-AAF2-D0479B6B3FE3.xcactivitylog  04962C96-4E66-46C5-88EE-0FB2835DB43C.xcactivitylog  050A4704-D784-4662-BEB3-1BD57CA552D2.xcactivitylog  054AC7B4-8E8C-46B8-9463-181F8ADAC864.xcactivitylog  (+426 more)
DerivedData/RayTracer/TextIndex/: text-filter.idx  text-filter.idx.REMOVED.git-id
RayTracer.xcodeproj/: project.pbxproj
RayTracer.xcodeproj/project.xcworkspace/xcshareddata/: RayTracer.xccheckout
RayTracer2.0/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  Box.cpp  Box.h  CentrePoints.txt  FresnelJackson.cpp  FresnelJackson.h  FresnelJackson.hpp  Functions.cpp  Functions.h  List.cpp  List.h  MATLABPrint.cpp  MATLABPrint.h  Material.cpp  Material.h  MatrixMath.cpp  MatrixMath.h  MultipleObjects.cpp  MultipleObjects.h  Photon.cpp  Photon.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Process.cpp  Process.h  RayTracer2_0.1  Sheet.cpp  Sheet.h  Sizes.txt  Spherical3D.cpp  Spherical3D.h  Test.cpp  Test.h  (+70 more)
RayTracer2.0.xcodeproj/: project.pbxproj
RayTracer2.0.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RayTracer2.0/data/: Absorption-Emission Data.txt  absoption_lambda.txt  absorption_extinctionrate.txt  data.txt  emission_AU.txt  emission_quantumyield.txt
RayTracer2.0/data/hybrid/: z-COLD-Abs-R(10)-W(300,2500).txt  z-COLD-Abs-R(60)-W(300,2500).txt  z-COLD-Scat-R(10)-W(300,2500).txt  z-COLD-Scat-R(60)-W(300,2500).txt  z-HOT-Abs-R(10)-W(300,2500).txt  z-HOT-Abs-R(60)-W(300,2500).txt  z-HOT-Scat-R(10)-W(300,2500).txt  z-HOT-Scat-R(60)-W(300,2500).txt  z-HOT-Wavelengths(300,10,2500).txt
(+22 files in other folders)
